<resources>
    <string name="app_name">Conc</string>
    <string name="action_settings">Settings</string>
    <string name="raleway_regular">Raleway-Regular</string>
    <string name="Name">Name</string>
    <string name="Age">Age</string>
    <string name="DOB">Date of Birth</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="dateOfPreviousTest">Last Tested:</string>
    <string name="enter_message">Enter Value</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_surname">Surname</string>
    <string name="enter_DOB">Select</string>
    <string name="enter_weight">Weight (kg)</string>
    <string name="enter_height">Height (m)</string>
    <string name="appbar_done">Done</string>
    <string name="appbar_edit">Edit</string>
    <string name="empty_field">Please complete all fields</string>
    <string name="dob_field_error">Please enter a valid date of birth</string>
    <string name="complete_name">Enter name</string>
    <string name="last_tested_text">None</string>
    <string name="error">Error</string>
    <string name="kg">kg</string>
    <string name="lb">lb</string>
    <string name="m">m</string>
    <string name="takePhoto">Take Photo</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="request_calendar_read_permission">This sample needs calendar read permission.</string>
    <string name="request_calendar_write_permission">This sample needs calendar write permission.</string>
    <string name="hint_search">Search Players</string>
    <string name="empty_list_message">No Results</string>
    <string name="no_players_message">No Registered Players</string>
    <string name="no_players_message2">Select</string>
    <string name="no_players_message3">To Add a Player</string>
    <string name="no_teams_message">You are not authorized to view any teams. Please contact joshf@sun.ac.za to register a team</string>
    <string name="status_healthy">Healthy</string>
    <string name="delete_conformation">Are you sure you want to delete this player?</string>
    <string name="delete_positive">Yes</string>
    <string name="delete_negative">No</string>
    <string name="start_test">Start Test</string>
    <string name="player_info">Player Info</string>
    <string name="player_history">Player History</string>
    <string-array name="menu_array">
        <item>Player Profile</item>
        <item>Side-Line Test</item>
        <item>Baseline Test</item>
        <item>Follow up Test</item>
    </string-array>
    <string name="title_activity_test_menu">TestMenuActivity</string>
    <string-array name="testmenu_array">
        <item>Head Impact Assessment 1</item>
        <item>Head Impact Assessment 2</item>
        <item>Head Impact Assessment 3</item>
    </string-array>
    <string name="title_activity_administrator">AdministratorActivity</string>
    <string name="physician_name_hint">..."Dr Gerard Smith"</string>
    <string name="physician_name">Physicians Name:</string>
    <string name="date">Date:</string>
    <string name="date_hint">..."dd/mm/yyyy"</string>
    <string name="assessment_time">Assessment Time:</string>
    <string name="assessment_time_hint">..."19:00"</string>
    <string name="kickoff_time">Kick-Off Time:</string>
    <string name="kickoff_time_hint">..."19:00"</string>
    <string name="hia1a_section_header">COMPLETE EITHER SECTION 1 OR SECTION 2</string>
    <string name="hia1a_section1_header">SECTION 1: Immediate and permanent removal from play</string>
    <string name="symptom_tp">Tonic posturing</string>
    <string name="symptom_conv">Convulsion</string>
    <string name="symptom_cconsc">Confirmed loss of consciousness</string>
    <string name="symptom_sconsc">Suspected loss of consciousness</string>
    <string name="symptom_bal">Balance disturbance/ataxia</string>
    <string name="symptom_orien">Player not orientated in time, place or person</string>
    <string name="symptom_daze">Clearly dazed</string>
    <string name="symptom_conf">Definite confusion</string>
    <string name="symptom_behav">Definite behavioural cahnges</string>
    <string name="symptom_ident">On field identification of sign or symptom of concussion</string>
    <string name="symptom_ocu">Oculomotor signs (e.g. spontaneous nystagmus)</string>
    <string name="hia1a_removal_header">Removal requested by:</string>
    <string name="removal_dr">"Team doctor"</string>
    <string name="removal_mdd">"Match day doctor"</string>
    <string name="removal_phy">"Physiotherapist"</string>
    <string name="removal_ref">"Referee"</string>
    <string name="removal_tdr">"Tournament Doctor"</string>
    <string name="removal_video">"Following in-game video review"</string>
    <string name="hia1a_video_header">Video Available?</string>
    <string name="vid_yes">"Yes"</string>
    <string name="vid_no">"No"</string>
    <string name="title_activity_hia1">HIA1Activity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_hia">HIAActivity</string>
    <string name="hia1a_section21_header">SECTION 2: Pitch-side Head Injury Assessment</string>
    <string name="hia1a_section22_header">Identify reason(s) for HIA below:</string>
    <string name="hia1a_section31_header">Pitch-side Head Injury Assessment</string>
    <string name="hia1a_section32_header">ANSWER ALL QUESTIONS - (Incorrect =1, Correct =2)</string>
    <string name="hia1a_section33_header">Any coloumn = 1, NO return to play </string>
    <string name="hia1a_section34_header">Maddocks Questions - Orientation </string>
    <string name="madd1">What venue are we at today?</string>
    <string name="madd2">Which half is it now?</string>
    <string name="madd3">Who scored last in this match?</string>
    <string name="madd4">What team did you play last week/game?</string>
    <string name="madd5">Did your team win the last game?</string>
    <string name="incorrect">Incorrect</string>
    <string name="correct">Correct</string>
    <string name="hia1a_section41_header">Symptoms checklist</string>
    <string name="symptom2_1">Do you have a headache?</string>
    <string name="symptom2_2">Do you have any dizziness?</string>
    <string name="symptom2_3">Do you have any \'pressure in your head\'?</string>
    <string name="symptom2_4">Do you feel nauseated or do you feel like vomiting?</string>
    <string name="symptom2_5">Do you have any blurred vision?</string>
    <string name="symptom2_6">Does the light or noise worry you?</string>
    <string name="symptom2_7">Do you feel as though you are slowing down?</string>
    <string name="symptom2_8">Do you feel like you are in a fog?</string>
    <string name="symptom2_9">Do you feel unwell?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="hia1a_section51_header">Delayed Recall</string>
    <string name="hia1a_section52_header">(ABNORMAL is a score less than 3 or less than baseline)</string>
    <string name="recall">Test recall of immediate memory words</string>
    <string name="abnormal">Abnormal</string>
    <string name="normal">Normal</string>
    <string name="hia1a_section61_header">Clinical signs</string>
    <string name="cs1">Emotional - sad, anxious, nervous, irritable</string>
    <string name="cs2">Drowsy/ has difficulty concentrating</string>
    <string name="cs3">Doctor performing HIA suspects concussion despite above test being normal</string>
    <string name="hia1a_section71_header">Requested by:</string>
    <string name="hia1a_section81_header">Completed by:</string>
    <string name="hia1a_section91_header">Player removed:</string>
    <string name="vid_influence">Did video influence the request for the HIA?</string>
    <string name="MDD_present">Was the Match Day Doctor present during the HIA??</string>
    <string name="vid_influence2">Did video influence the decision following the HIA?</string>
    <string name="hia1a_81_sectionheader">ANSWER ALL QUESTIONS</string>
    <string name="hia1a_811_sectionheader">Any coloumn 1 answer = NO return to play</string>
    <string name="hia1a_82_sectionheader">Immediate memory</string>
    <string name="hia1a_83_sectionheader">Digits backwards</string>
    <string name="opt_1">Option 1 &#160; - &#160;&#160; </string>
    <string name="opt_2">Option 2 &#160; - &#160;&#160; </string>
    <string name="opt_3">Option 3 &#160; - &#160;&#160; </string>
    <string name="opt_1_num1">Option 1 numbers: -</string>
    <string name="opt_2_num2">Option 2 numbers (if needed): -</string>
    <string-array name="player_removed_spinner">
        <item>Yes, player immediately and permanently removed</item>
        <item>Yes, pitch-side HIA abnormal and player removed</item>
        <item>Yes, pitch-side HIA normal and player removed</item>
        <item>Yes, pitch-side HIA normal and player returned to play</item>
        <item>Yes, HIA normal and player removed for another injury</item>
        <item>No</item>
    </string-array>
    <string-array name="hia1_1_spinner">
        <item>Referee</item>
        <item>Team doctor</item>
        <item>Tournament doctor</item>
        <item>Match day doctor</item>
        <item>Following in-game video review</item>
        <item>Physiotherapist</item>
    </string-array>
    <string name="imed_score">Immediate memory score (out of 15):</string>
    <string name="digback_score">Digits backwards score (out of 4):</string>
    <string name="del_score">Delayed memory score (out of 5):</string>
    <string name="hia2a_section11_header">Was an HIA1 form completed, and if yes, what was the restult?</string>
    <string name="hia2a_section12_header">Select one option:</string>
    <string name="hia2a_section21_header">SECTION 1: Symptom Checklist</string>
    <string name="hia2a_section22_header">Ask the player: Do you have any of the following symptoms? Ask about every symptom listed.
    Score each symptom, based on how the player feels at the time of questioning, from 0 (no symptom at all)
        to 6(the most severe they ave ever experienced). </string>
    <string-array name="listDataHeader">
        <item>Headaches</item>
        <item>\'Pressure in head\'</item>
        <item>Neck pain</item>
        <item>Nausea/vomiting</item>
        <item>Dizziness</item>
        <item>Blurred vision</item>
        <item>Balance problems</item>
        <item>Sensitivity to light</item>
        <item>Sensitivity to noise</item>
        <item>Feeling slowed down</item>
        <item>Feeling like \'in a fog\'</item>
        <item>\'Dont feel right\'</item>
        <item>Difficulty concentrating</item>
        <item>Difficulty remembering</item>
        <item>Fatigue/low energy</item>
        <item>Confusion</item>
        <item>Drowsiness</item>
        <item>Trouble falling asleep</item>
        <item>More emotional</item>
        <item>Irritability</item>
        <item>Sadness</item>
        <item>Nervous/anxious</item>
    </string-array>
    <string name="exp_not_conc">If the injured player has symptoms not usually experienced following
    a Rugby match or training and your diagnosis is NOT concussion please provide an explanation
        (below) for not confirming a diagnosis of concussion</string>
    <string name="hia2a_section31_header">SECTION 2: Cognitive Assessment</string>
    <string name="sac_dr">SAC - Delayed Recall</string>
    <string name="Reas_HIA3">Reason for HIA3?</string>
    <string name="hia3a_1_sectionheader">SECTION 2: Summary of HIA1 and HIA2</string>
    <string name="hia3a_21_sectionheader">Was an HIA1 form completed, and if yes, what was the result? (Select one option):</string>
    <string name="hia3a_22_sectionheader">Was an HIA2 form completed, and if yes, what was the clinical diagnosis at the time? (Select one option):</string>
</resources>