<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:background="@drawable/action_button_select"
        android:textColor="@color/buttontext_selector"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:id="@+id/startTest"
        android:layout_gravity="center"
        android:text="@string/start_test"
        android:elevation="2dp" />
    <Button
        android:background="@drawable/action_button_select"
        android:textColor="@color/buttontext_selector"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:id="@+id/playerInfo"
        android:text="@string/player_info"
        android:layout_gravity="left|center_vertical"
        android:elevation="2dp" />
    <Button
        android:background="@drawable/action_button_select"
        android:textColor="@color/buttontext_selector"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:id="@+id/playerHistory"
        android:layout_gravity="right|center_vertical"
        android:text="@string/player_history"
        android:elevation="2dp" />

</FrameLayout>