<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="15dp"
        android:id="@+id/linearLayout001">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView001"
            android:text="@string/Reas_HIA3"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="16sp"
            />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner27"
            android:layout_weight="1"
            android:spinnerMode="dialog"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="25dp"
        android:id="@+id/linearLayout002"
        android:layout_below="@+id/linearLayout001">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView002"
            android:text="@string/hia3a_1_sectionheader"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="16sp"
            />

    </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView003"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="14sp"
            android:layout_marginTop="20dp"
            android:text="@string/hia3a_21_sectionheader"
            />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/HIA3_HIA1_result"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView004"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="14sp"
        android:layout_marginTop="30dp"
        android:text="@string/hia3a_22_sectionheader"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/HIA3_HIA2_result"
        android:layout_marginTop="10dp"/>





</LinearLayout>