<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.joshf.conc.PlayerProfile">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/unknown"
        android:src="@drawable/unknown"
        android:layout_alignParentBottom="true" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_players_message"
        android:gravity="center_horizontal"
        android:textSize="25sp"
        android:id="@+id/message1"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linearLayout"
        android:layout_below="@+id/message1">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_players_message2"
            android:textSize="25sp"
            android:id="@+id/textView"
            android:layout_below="@+id/message1"
            android:layout_alignParentStart="true"
            android:layout_marginStart="29dp"
            android:layout_weight="1"/>

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/add"
            android:id="@+id/imageView"
            android:layout_weight="1"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_players_message3"
            android:textSize="25sp"
            android:id="@+id/textView2"
            android:layout_marginEnd="29dp"
            android:layout_weight="1" />
    </LinearLayout>



</RelativeLayout>