<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/frag_hia2e"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout001"
        android:paddingTop="15dp">

        <TextView
            android:text="@string/sac_dr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView1"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="18sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayout001"
        android:id="@+id/linearLayout002"
        android:paddingTop="10dp"
        >

        <TextView
            android:text="@string/opt_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView36"
            android:layout_weight="0.00"
            android:paddingTop="10dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="14sp"

            />

        <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/option1"
            android:layout_weight="0.00" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayout002"
        android:paddingTop="10dp"
        android:id="@+id/linearLayout003"
        >

        <TextView
            android:text="@string/opt_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView33"
            android:layout_weight="0.00"
            android:paddingTop="10dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="14sp"

            />

        <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/option2"
            android:layout_weight="0.00" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayout003"
        android:paddingTop="10dp"
        android:id="@+id/linearLayout004"
        >

        <TextView
            android:text="@string/opt_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView0000"
            android:layout_weight="0.00"
            android:paddingTop="10dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="14sp"

            />

        <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/option3"
            android:layout_weight="0.00" />


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout004"
        android:id="@+id/linearLayout0033"
        android:paddingTop="20dp"
        >
        <TextView
            android:layout_width="230dp"
            android:layout_height="26dp"
            android:text="@string/del_score"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="14sp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="5"
            android:id="@+id/editText12"
            android:paddingLeft="5dp"
            android:imeOptions="actionDone"/>

    </LinearLayout>

</RelativeLayout>